# conccurent_programming

./: .gitignore  CMakeLists.txt  README.md  projet1.pro  projet1.pro.user.984ccf0  projet1.pro.user.a94b3b7
LIVRABLES FINAUX/: ScriptCrea.sql
contract/: Observable.cpp  Observable.h  Observer.h
controller/classDeclaration/: DBController.h  DashboardController.h  MainController.h  Managers.h  MotionlessElementController.h  MoveController.h  TimerController.h
controller/classDefinition/: DBController.cpp  DashboardController.cpp  MainController.cpp  Managers.cpp  MotionlessElementController.cpp  MoveController.cpp  TimerController.cpp
enum/: IngredientEnum.h  IngredientQuantite.h  Recette.h  RecipeBook.cpp  RecipeBook.h
main/: main.cpp
model/classDeclaration/: Butler.h  CardModel.h  Chief.h  ClientGroupCreator.h  ClientModel.h  Cook.h  DashboardModel.h  DinningRoom.h  DirtyDishesStorage.h  DishwasherModel.h  HeadWaiter.h  Human.h  KitchenAssistant.h  KitchenCounter.h  MaterialModel.h  ObjectModel.h  Order.h  Recipe.h  RestaurantDiver.h  RoomClerk.h  Server.h  StorageModel.h  Table.h  ThreadPool.h  UstensilModel.h  WashingMachine.h
model/classDefinition/: Butler.cpp  CardModel.cpp  Chief.cpp  ClientGroupCreator.cpp  ClientModel.cpp  Cook.cpp  DashboardModel.cpp  DinningRoom.cpp  DirtyDishesStorage.cpp  DishwasherModel.cpp  HeadWaiter.cpp  Human.cpp  KitchenAssistant.cpp  KitchenCounter.cpp  MaterialModel.cpp  ObjectModel.cpp  Order.cpp  Recipe.cpp  RestaurantDiver.cpp  RoomClerk.cpp  Server.cpp  StorageModel.cpp  Table.cpp  ThreadPool.cpp  UstensilModel.cpp  WashingMachine.cpp
model/graphicElement/classDeclaration/: QGraphicElement.h
model/graphicElement/classDefinition/: QGraphicElement.cpp
tests/: CMakeLists.txt  dashboard_model_test.cpp
view/: DisplayInterfacesClass.cpp  DisplayInterfacesClass.h  dashboard.cpp  dashboard.h  dashboard.ui  kitchen.cpp  kitchen.h  kitchen.ui  resources.qrc  tempCodeRunnerFile.cpp  view.cpp  view.h  view.ui
view/assets/: kitchen.css  style.css
